[package]
name = "fetch-og-data"
version = "0.1.0"
authors = ["Nico <nickypellerin@gmail.com>"]
edition = "2018"



[dependencies]
reqwest = { version = "0.10.6", features = ["blocking", "json"]}
wasm-bindgen = "0.2.64"
wasm-bindgen-futures = "0.4.14"
js-sys = "0.3.41"
# tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"

[lib]
crate-type = ["cdylib", "rlib"]
