[package]
name = "fetch-og-data"
version = "0.1.0"
authors = ["Nico <nickypellerin@gmail.com>"]
edition = "2018"



[dependencies]
wasm-bindgen = "0.2.64"
wasm-bindgen-futures = "0.4.14"
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
js-sys = "0.3.41"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"